k8s-3/microservice-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: microservice-app
  name: microservice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-app
  template:
    metadata:
      labels:
        app: microservice-app
        vm.kubevirt.io/name: monolith-app
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - image: quay.io/nlembers/app-mod-microservice-app:latest
          name: app-mod-microservice-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
